# spalm

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
doc/: index.md  project-description.md  project.md
doc/spec/proposal/: inicializar-projeto.md
doc/spec/refused/: .empty
doc/spec/specification/: spec-inicializar-projeto.md
mdbook-sample/: book.toml  todo.md
mdbook-sample/spec/: SUMMARY.md  about.md  other.md  sep-rejected.md  sep.md  spec.md  team.md  tutorial.md
src/: cli.rs  command.rs  lib.rs  main.rs  utils.rs
src/cli/: cmd_error.rs  cmd_handler.rs  cmd_result.rs  commands.rs
src/cli/commands/: init.rs
