[package]
name = "spalm"
version = "0.1.0-alpha"
authors = [
    "The E5R Development Team",
    "Erlimar Silva Campos <erlimar@gmail.com>"
]
description = "Specification Project of E5R Application Lifecycle Management"
repository = "https://github.com/e5r/spalm"
keywords = ["e5r", "cli", "alm"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
structopt = "0.3.15"
